--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Budapest Kubb Klub</title>
-  <meta name="description" content="Budapest Kubb Klub – baráti, ingyenes kubb közösség. HU/EN/SV." />
+  <meta name="description" content="Budapest Kubb Klub – baráti, ingyenes kubb közösség." />
   <meta property="og:title" content="Budapest Kubb Klub" />
   <meta property="og:description" content="Dobd a botot. Szerezz barátokat. Ismételd." />
   <meta property="og:type" content="website" />
@@ -31,9 +31,7 @@
         <a href="#join" data-i18n="nav.join" class="hover:text-slate-900">Csatlakozz</a>
       </nav>
       <div class="flex items-center gap-1 rounded-xl border bg-white p-1" aria-label="Language selector">
-        <button data-lang="hu" class="px-3 py-1 text-sm rounded-lg bg-slate-900 text-white">HU</button>
-        <button data-lang="en" class="px-3 py-1 text-sm rounded-lg hover:bg-slate-100">EN</button>
-        <button data-lang="sv" class="px-3 py-1 text-sm rounded-lg hover:bg-slate-100">SV</button>
+       <!-- <button data-lang="hu" class="px-3 py-1 text-sm rounded-lg bg-slate-900 text-white">HU</button>> -->
       </div>
     </div>
   </header>
@@ -261,7 +259,7 @@
         nav: { about: "Bemutatkozás", rules: "Szabályok", videos: "Videók", events: "Események", photos: "Képek", join: "Csatlakozz" },
         hero: {
           title: "Dobd a botot. Szerezz barátokat. Ismételd.",
-          blurb: "A Budapest Kubb Klub egy kötetlen, ingyenes kubb közösség Budapesten. Rendszeresen találkozunk a Múzeumkertben (Múzeum körút, Bródy Sándor utca közelében). Minden szintet várunk — a szabályokat 5 perc alatt elmagyarázzuk.",
+          blurb: "A Budapest Kubb Klub egy kötetlen, ingyenes kubb közösség Budapesten. Rendszeresen találkozunk parkokban (Múzeumkertben, Margitsziget, Bikás park). Minden szintet várunk — a szabályokat 5 perc alatt elmagyarázzuk.",
           ctaEvents: "Közelgő események",
           ctaRules: "Mi az a kubb?"
         },
