--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Budapest Kubb Klub</title>
   <meta name="description" content="Budapest Kubb Klub – baráti, ingyenes kubb közösség." />
   <meta property="og:title" content="Budapest Kubb Klub" />
-  <meta property="og:description" content="Dobd a botot. Szerezz barátokat. Ismételd." />
+  <meta property="og:description" content="Szeretünk kubbozni. Tesztelem a ChatGPT5-öt. A meghirdetett események valósak." />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#0f172a" />
 
@@ -258,7 +258,7 @@
       hu: {
         nav: { about: "Bemutatkozás", rules: "Szabályok", videos: "Videók", events: "Események", photos: "Képek", join: "Csatlakozz" },
         hero: {
-          title: "Dobd a botot. Szerezz barátokat. Ismételd.",
+          title: "Szeretünk kubbozni. Tesztelem a ChatGPT5-öt. A meghirdetett események valósak.",
           blurb: "A Budapest Kubb Klub egy kötetlen, ingyenes kubb közösség Budapesten. Rendszeresen találkozunk parkokban (Múzeumkertben, Margitsziget, Bikás park). Minden szintet várunk — a szabályokat 5 perc alatt elmagyarázzuk.",
           ctaEvents: "Közelgő események",
           ctaRules: "Mi az a kubb?"
