--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <h2 class="text-3xl font-bold" data-i18n="photos.heading">Képek</h2>
       <p class="mt-3 text-slate-700" data-i18n="photos.intro">Hangulatképek — hamarosan.</p>
       <div class="mt-6 grid md:grid-cols-3 gap-6">
-        <figure class="rounded-2xl overflow-hidden card"><img src="https://images.unsplash.com/photo-1520975922284-9e0ce8270787?q=80&w=1200&auto=format&fit=crop" alt="Napos parkbeli találkozó" data-i18n-attr="alt:gallery.alt0" class="w-full h-60 object-cover"/></figure>
+        <figure class="rounded-2xl overflow-hidden card"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Kubb_game_setup.svg/1920px-Kubb_game_setup.svg.png" alt="Napos parkbeli találkozó" data-i18n-attr="alt:gallery.alt0" class="w-full h-60 object-cover"/></figure>
         <figure class="rounded-2xl overflow-hidden card"><img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1200&auto=format&fit=crop" alt="Barátok nevetnek játék közben" data-i18n-attr="alt:gallery.alt1" class="w-full h-60 object-cover"/></figure>
         <figure class="rounded-2xl overflow-hidden card"><img src="https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?q=80&w=1200&auto=format&fit=crop" alt="Kötetlen, versenyes hangulat" data-i18n-attr="alt:gallery.alt2" class="w-full h-60 object-cover"/></figure>
       </div>
