--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <div class="bg-white/10 rounded-2xl p-6">
           <h3 class="font-semibold" data-i18n="join.contact">Kapcsolat</h3>
-          <p class="mt-2 text-slate-200 text-sm" data-i18n="join.contactSoon">Hamarosan elérhetőség! Kövess minket a frissítésekért.</p>
+          <p class="mt-2 text-slate-200 text-sm" data-i18n="join.contactSoon">budapestkubb kukac gmail pont com</p>
           <h3 class="mt-6 font-semibold" data-i18n="join.faq">GYIK</h3>
           <ul class="mt-2 text-sm text-slate-200 space-y-2">
             <li><strong data-i18n="join.faqItems.0.q">Kell hozni valamit?</strong> <span data-i18n="join.faqItems.0.a">Nem — a készleteket mi biztosítjuk. Víz és egy nasi jól jön.</span></li>
@@ -243,7 +243,7 @@
           heading: "Csatlakozz a Budapest Kubb Klubhoz",
           intro: "Gyere el egy eseményre, vagy kövess minket frissítésekért. Nincs tagsági díj, nincs kötelezettség — csak játék.",
           contact: "Kapcsolat",
-          contactSoon: "Hamarosan elérhetőség! Kövess minket a frissítésekért.",
+          contactSoon: "budapestkubb kukac gmail pont com",
           faq: "GYIK",
           whatsapp: "Csatlakozz a WhatsApp csoporthoz",
           faqItems:[
