--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Budapest Kubb Klub</title>
   <meta name="description" content="Budapest Kubb Klub – baráti, ingyenes kubb közösség." />
   <meta property="og:title" content="Budapest Kubb Klub" />
-  <meta property="og:description" content="Szeretünk kubbozni. Tesztelem a ChatGPT5-öt. A meghirdetett események valósak." />
+  <meta property="og:description" content="Szeretünk kubbozni." />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#0f172a" />
 
@@ -159,7 +159,7 @@
           <p class="mt-3 text-slate-200" data-i18n="join.intro">Gyere el egy eseményre, vagy kövess minket frissítésekért. Nincs tagsági díj, nincs kötelezettség — csak játék.</p>
           <ul class="mt-6 grid grid-cols-2 gap-3 max-w-md" id="socials">
             <!-- Social buttons auto-hide if empty (handled in JS) -->
-            <li><a class="block px-5 py-3 rounded-2xl bg-white text-slate-900 font-semibold text-center" href="" data-social="facebook">Facebook</a></li>
+            <li><a class="block px-5 py-3 rounded-2xl bg-white text-slate-900 font-semibold text-center" href="https://www.facebook.com/people/Budapest-Kubb-Klub/61578973092964/" data-social="facebook">Facebook</a></li>
             <li><a class="block px-5 py-3 rounded-2xl bg-white text-slate-900 font-semibold text-center" href="" data-social="instagram">Instagram</a></li>
             <li><a class="block px-5 py-3 rounded-2xl bg-white text-slate-900 font-semibold text-center" href="" data-social="tiktok">TikTok</a></li>
             <li><a class="block px-5 py-3 rounded-2xl bg-white text-slate-900 font-semibold text-center" href="" data-social="meetup">Meetup</a></li>
