--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="max-w-6xl mx-auto px-4 pt-12 pb-10 md:pt-16">
       <div class="grid md:grid-cols-2 gap-8 items-center">
         <div>
-          <h1 class="text-4xl md:text-5xl font-extrabold leading-tight" data-i18n="hero.title">Szeretünk kubbozni. Tesztelem a ChatGPT5-öt. A meghirdetett események valósak. </h1>
+          <h1 class="text-4xl md:text-5xl font-extrabold leading-tight" data-i18n="hero.title">Szeretünk kubbozni.</h1>
           <p class="mt-4 text-lg text-slate-600" data-i18n="hero.blurb">A Budapest Kubb Klub egy kötetlen, ingyenes kubb közösség Budapesten. Rendszeresen találkozunk parkokban (Múzeumkertben, Margitsziget, Bikás park). Minden szintet várunk — a szabályokat 5 perc alatt elmagyarázzuk.</p>
           <div class="mt-6 flex flex-wrap gap-3">
             <a href="#events" class="px-5 py-3 rounded-2xl card bg-slate-900 text-white font-semibold hover:opacity-90" data-i18n="hero.ctaEvents">Közelgő események</a>
