--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       hu: {
         nav: { about: "Bemutatkozás", rules: "Szabályok", videos: "Videók", events: "Események", photos: "Képek", join: "Csatlakozz" },
         hero: {
-          title: "Szeretünk kubbozni. Tesztelem a ChatGPT5-öt. A meghirdetett események valósak.",
+          title: "Szeretünk kubbozni.",
           blurb: "A Budapest Kubb Klub egy kötetlen, ingyenes kubb közösség Budapesten. Rendszeresen találkozunk parkokban (Múzeumkertben, Margitsziget, Bikás park). Minden szintet várunk — a szabályokat 5 perc alatt elmagyarázzuk.",
           ctaEvents: "Közelgő események",
           ctaRules: "Mi az a kubb?"
