--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="grid md:grid-cols-2 gap-8 items-center">
         <div>
           <h1 class="text-4xl md:text-5xl font-extrabold leading-tight" data-i18n="hero.title">Szeretünk kubbozni.</h1>
-          <p class="mt-4 text-lg text-slate-600" data-i18n="hero.blurb">A Budapest Kubb Klub egy kötetlen, ingyenes kubb közösség Budapesten. Rendszeresen találkozunk parkokban (Múzeumkertben, Margitsziget, Bikás park). Minden szintet várunk — a szabályokat 5 perc alatt elmagyarázzuk.</p>
+          <p class="mt-4 text-lg text-slate-600" data-i18n="hero.blurb">A Budapest Kubb Klub egy kötetlen, ingyenes kubb közösség Budapesten. Rendszeresen találkozunk parkokban (Múzeumkert, Margitsziget, Bikás park). Várunk haladókat és kezdőket — a szabályokat 5 perc alatt elmagyarázzuk.</p>
           <div class="mt-6 flex flex-wrap gap-3">
             <a href="#events" class="px-5 py-3 rounded-2xl card bg-slate-900 text-white font-semibold hover:opacity-90" data-i18n="hero.ctaEvents">Közelgő események</a>
             <a href="#rules" class="px-5 py-3 rounded-2xl card bg-white border font-semibold hover:bg-slate-50" data-i18n="hero.ctaRules">Mi az a kubb?</a>
@@ -71,7 +71,7 @@
       <div class="grid md:grid-cols-2 gap-10 items-start">
         <div>
           <h2 class="text-3xl font-bold" data-i18n="about.heading">Mi a kubb?</h2>
-          <p class="mt-4 text-slate-700" data-i18n="about.p1">A kubb egy barátságos, svéd eredetű szabadtéri játék — kicsit bowling, kicsit patkódobás, egy kis stratégia. Két csapat dob fábotokat, ledönti a kubbokat, végül a királyt.</p>
+          <p class="mt-4 text-slate-700" data-i18n="about.p1">A kubb egy svéd eredetű szabadtéri ügyességi játék. Két csapat dob fabotokat, ledönti a kubbokat, végül a királyt.</p>
           <p class="mt-3 text-slate-700" data-i18n="about.p2">Nálunk a jó hangulat az első: friss levegő, közösség, játék. Ha később versenyezünk is, az szuper — most egyelőre csak játszunk.</p>
           <ul class="mt-4 list-disc pl-5 text-slate-700 space-y-2">
             <li data-i18n="about.list.0">Minden korosztály és szint</li>
@@ -83,20 +83,16 @@
           <h3 class="text-xl font-semibold" data-i18n="about.facts.heading">Gyors tények</h3>
           <dl class="mt-4 grid grid-cols-1 sm:grid-cols-2 gap-4 text-sm">
             <div>
-              <dt class="text-slate-500">Game time / Játékidő / Speltid</dt>
+              <dt class="text-slate-500">Játékidő</dt>
               <dd class="font-medium" data-i18n="about.facts.gameTime">10–40 perc</dd>
             </div>
             <div>
-              <dt class="text-slate-500">Players / Játékosok / Spelare</dt>
+              <dt class="text-slate-500">Játékosok</dt>
               <dd class="font-medium" data-i18n="about.facts.players">2–12 (ideális: 4–6)</dd>
             </div>
             <div>
-              <dt class="text-slate-500">Field size / Pálya / Planstorlek</dt>
+              <dt class="text-slate-500">Pálya</dt>
               <dd class="font-medium" data-i18n="about.facts.field">5m × 8m</dd>
-            </div>
-            <div>
-              <dt class="text-slate-500">Vibe / Hangulat / Känsla</dt>
-              <dd class="font-medium" data-i18n="about.facts.vibe">Laza és befogadó</dd>
             </div>
           </dl>
         </div>
@@ -168,10 +164,10 @@
         </div>
         <div class="bg-white/10 rounded-2xl p-6">
           <h3 class="font-semibold" data-i18n="join.contact">Kapcsolat</h3>
-          <p class="mt-2 text-slate-200 text-sm" data-i18n="join.contactSoon">budapestkubb kukac gmail pont com</p>
+          <p class="mt-2 text-slate-200 text-sm" data-i18n="join.contactEmail">budapestkubb kukac gmail pont com</p>
           <h3 class="mt-6 font-semibold" data-i18n="join.faq">GYIK</h3>
           <ul class="mt-2 text-sm text-slate-200 space-y-2">
-            <li><strong data-i18n="join.faqItems.0.q">Kell hozni valamit?</strong> <span data-i18n="join.faqItems.0.a">Nem — a készleteket mi biztosítjuk. Víz és egy nasi jól jön.</span></li>
+            <li><strong data-i18n="join.faqItems.0.q">Kell hozni valamit?</strong> <span data-i18n="join.faqItems.0.a">Nem — a készleteket mi biztosítjuk. Víz és egy kis nasi jól jön.</span></li>
             <li><strong data-i18n="join.faqItems.1.q">Gyerekek jöhetnek?</strong> <span data-i18n="join.faqItems.1.a">A játék 10 éves kor felett ajánlott.</span></li>
             <li><strong data-i18n="join.faqItems.2.q">Még sosem játszottam.</strong> <span data-i18n="join.faqItems.2.a">Szuper! Pár perc és már játszol is.</span></li>
           </ul>
@@ -213,13 +209,13 @@
         nav: { about: "Bemutatkozás", rules: "Szabályok", videos: "Videók", events: "Események", photos: "Képek", join: "Csatlakozz" },
         hero: {
           title: "Szeretünk kubbozni.",
-          blurb: "A Budapest Kubb Klub egy kötetlen, ingyenes kubb közösség Budapesten. Rendszeresen találkozunk parkokban (Múzeumkertben, Margitsziget, Bikás park). Minden szintet várunk — a szabályokat 5 perc alatt elmagyarázzuk.",
+          blurb: "A Budapest Kubb Klub egy kötetlen, ingyenes kubb közösség Budapesten. Rendszeresen találkozunk parkokban (Múzeumkert, Margitsziget, Bikás park). Várunk haladókat és kezdőket — a szabályokat 5 perc alatt elmagyarázzuk.",
           ctaEvents: "Közelgő események",
           ctaRules: "Mi az a kubb?"
         },
         about: {
           heading: "Mi a kubb?",
-          p1: "A kubb egy barátságos, svéd eredetű szabadtéri játék — kicsit bowling, kicsit patkódobás, egy kis stratégia. Két csapat dob fábotokat, ledönti a kubbokat, végül a királyt.",
+          p1: "A kubb egy svéd eredetű szabadtéri ügyességi játék. Két csapat dob fabotokat, ledönti a kubbokat, végül a királyt.",
           p2: "Nálunk a jó hangulat az első: friss levegő, közösség, játék. Ha később versenyezünk is, az szuper — most egyelőre csak játszunk.",
           list: ["Minden korosztály és szint","Ingyenes — a felszerelést mi adjuk","Bármikor be lehet csatlakozni"],
           facts: { heading: "Gyors tények", gameTime: "10–40 perc", players: "2–12 (ideális: 4–6)", field: "5m × 8m", vibe: "Laza és befogadó" }
@@ -243,11 +239,11 @@
           heading: "Csatlakozz a Budapest Kubb Klubhoz",
           intro: "Gyere el egy eseményre, vagy kövess minket frissítésekért. Nincs tagsági díj, nincs kötelezettség — csak játék.",
           contact: "Kapcsolat",
-          contactSoon: "budapestkubb kukac gmail pont com",
+          contactEmail: "budapestkubb kukac gmail pont com",
           faq: "GYIK",
           whatsapp: "Csatlakozz a WhatsApp csoporthoz",
           faqItems:[
-            {q:"Kell hozni valamit?",a:"Nem — a készleteket mi biztosítjuk. Víz és egy nasi jól jön."},
+            {q:"Kell hozni valamit?",a:"Nem — a készleteket mi biztosítjuk. Víz és egy kis nasi jól jön."},
             {q:"Gyerekek jöhetnek?",a:"A játék 10 éves kor felett ajánlott."},
             {q:"Még sosem játszottam.",a:"Szuper! Pár perc és már játszol is."}
           ]
