--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           rulesSimple: 'Egyszerűsített szabályok',
           rulesWC: 'Kubb VB – Szabályok'
         },
-        videos: { heading: 'Nézd meg röviden', intro: 'Két rövid videó, kezdőknek is szuper.' },
+        videos: { heading: 'Nézd meg röviden', intro: 'Két angol nyelvű videó, egy a szabályokról, egy a vb döntőről.' },
         events: { heading: 'Közelgő események' },
         photos: { heading: 'Képek', intro: 'Hangulatképek' },
         join: {
@@ -291,7 +291,7 @@
           rulesSimple: 'Simplified rules',
           rulesWC: 'World Championship rules'
         },
-        videos: { heading: 'Watch quickly', intro: 'Two short videos: one on rules, one on a WC final.' },
+        videos: { heading: 'Watch quickly', intro: 'Two videos: one on rules, one on a world cup final.' },
         events: { heading: 'Upcoming events' },
         photos: { heading: 'Photos', intro: 'Vibes — coming soon.' },
         join: {
@@ -323,7 +323,7 @@
         nav: { about: 'Om oss', rules: 'Regler', videos: 'Videor', events: 'Träffar', photos: 'Bilder', join: 'Gå med' },
         hero: {
           title: 'Vi älskar kubb.',
-          blurb: 'Budapest Kubbklubb är en avslappnad, gratis kubbgemenskap i Budapest. Vi ses regelbundet i parker (Múzeumkert, Margaretaön, Bikás park). Alla är välkomna — vi lär ut reglerna på 5 minuter.',
+          blurb: 'Budapest Kubbklubb är en avslappnad, gratis kubbgemenskap i Budapest. Vi träffas regelbundet i parker (Múzeumkert, Margitsziget, Bikás park). Alla är välkomna — vi lär ut reglerna på 5 minuter.',
           ctaEvents: 'Kommande träffar',
           ctaRules: 'Vad är kubb?'
         },
@@ -334,7 +334,7 @@
           list: ['Alla åldrar och nivåer','Gratis — vi står för utrustningen','Kom när du vill'],
           facts: {
             heading: 'Snabbfakta',
-            labels: { gameTime: 'Speltid', players: 'Spelare', field: 'Plan' },
+            labels: { gameTime: 'Speltid', players: 'Spelare', field: 'Planstorlek' },
             gameTime: '10–40 min', players: '2–12 (idealt: 4–6)', field: '5 m × 8 m'
           }
         },
@@ -345,7 +345,7 @@
             'Fem kubbar på varje baslinje, kungen i mitten.',
             'Lagen kastar sex kastpinnar från baslinjen för att slå ner motståndarens kubbar.',
             'Nerslagna kubbar kastas till motståndarens planhalva och ställs upp — dessa ska tas först.',
-            'När alla kubbar är nere: gå på kungen — den som slår ner vinner.'
+            'När alla kubbar är nere: gå på kungen — den som slår ner den vinner.'
           ],
           official: 'Officiella källor'
         },
@@ -353,7 +353,7 @@
           rulesSimple: 'Förenklade regler',
           rulesWC: 'VM-regler'
         },
-        videos: { heading: 'Titta kort', intro: 'Två korta videor: en om reglerna, en från en VM-final.' },
+        videos: { heading: 'Titta kort', intro: 'Två videor: en om reglerna, en från VM-finalen.' },
         events: { heading: 'Kommande träffar' },
         photos: { heading: 'Bilder', intro: 'Stämningsbilder' },
         join: {
@@ -375,7 +375,7 @@
           launchday: {
             title: 'Lanseringsdag',
             date: 'Fredag 8 augusti kl. 16:00',
-            blurb: 'Öppen träff för alla nivåer. Reglerna på 5 minuter. Gratis och välkomnande!'
+            blurb: 'Öppen träff för alla nivåer. Reglerna förklaras på 5 minuter. Gratis och välkomnande!'
           }
         }
       }
