--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta property="og:description" content="Szeretünk kubbozni." />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#0f172a" />
-
+  <link rel="icon" type="image/jpeg" href="https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/528815641_24203226479331701_3789351171062668773_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=2oJ_kwtca5wQ7kNvwE7cqnf&_nc_oc=AdkQbTIRal_EmDzJuSqxo0XXh6Am0z3AEENLZ8Z-mSN_6n9iArghICJNEZ3l0-rfH41RSnLuyQSyac6NSoAYFyGy&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=t6xHBITt9f1oZ2Go3Ny1Sw&oh=00_AfU98tV7QSwqoPU3a2SrP46zjNEvHcJo8kWERNbFjYMsXg&oe=68A045D2" />
+  
   <!-- Tailwind via CDN (single-file, no build step) -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
