--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="relative">
           <div class="aspect-video rounded-2xl overflow-hidden card">
-            <img data-asset="heroImg" alt="" class="w-full h-full object-cover"/>
+            <img data-asset="heroImg" alt="" class="w-full h-full object-cover" style="height:100%; width: auto; margin: auto;"/>
           </div>
         </div>
       </div>
@@ -163,7 +163,7 @@
         gallery: [
           'https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Kubb_game_setup.svg/1920px-Kubb_game_setup.svg.png',
           'https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1200&auto=format&fit=crop',
-          'https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/528815641_24203226479331701_3789351171062668773_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=2oJ_kwtca5wQ7kNvwE7cqnf&_nc_oc=AdkQbTIRal_EmDzJuSqxo0XXh6Am0z3AEENLZ8Z-mSN_6n9iArghICJNEZ3l0-rfH41RSnLuyQSyac6NSoAYFyGy&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=t6xHBITt9f1oZ2Go3Ny1Sw&oh=00_AfU98tV7QSwqoPU3a2SrP46zjNEvHcJo8kWERNbFjYMsXg&oe=68A045D2'
+          'https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1200&auto=format&fit=crop'
         ]
       },
       ruleLinks: [
